FINERACT-1724: Sonar fixes